--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,26 @@
   --text-heading5: 1.125rem;
   --text-heading5--font-weight: 600;
 }
+
+@theme {
+  --primary-50: #fefce8;
+  --primary-100: #fef9c3;
+  --primary-200: #fef08a;
+  --primary-300: #fde047;
+  --primary-400: #facc15;
+  --primary-500: #eab308;
+  --primary-600: #ca8a04;
+  --primary-700: #a16207;
+  --primary-800: #854d0e;
+  --primary-900: #713f12;
+
+  --success-100: #dcfce7;
+  --success-200: #22c55e;
+  --success-300: #16a34a;
+  --success-400: #166534;
+
+  --danger-100: #fee2e2;
+  --danger-200: #ef4444;
+  --danger-300: #dc2626;
+  --danger-400: #991b1b;
+}
