🔧 Feature: text-secondary 클래스 추가 (#26)

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,9 @@
 
   --text-heading5: 1.125rem;
   --text-heading5--font-weight: 600;
+
+  --text-secondary: #4b5563;
+  --text-secondary--font-weight: 400;
 }
 
 @theme {
