--- a/src/index.css
+++ b/src/index.css
@@ -18,24 +18,24 @@
 }
 
 @theme {
-  --primary-50: #fefce8;
-  --primary-100: #fef9c3;
-  --primary-200: #fef08a;
-  --primary-300: #fde047;
-  --primary-400: #facc15;
-  --primary-500: #eab308;
-  --primary-600: #ca8a04;
-  --primary-700: #a16207;
-  --primary-800: #854d0e;
-  --primary-900: #713f12;
+  --color-primary-50: #fefce8;
+  --color-primary-100: #fef9c3;
+  --color-primary-200: #fef08a;
+  --color-primary-300: #fde047;
+  --color-primary-400: #facc15;
+  --color-primary-500: #eab308;
+  --color-primary-600: #ca8a04;
+  --color-primary-700: #a16207;
+  --color-primary-800: #854d0e;
+  --color-primary-900: #713f12;
 
-  --success-100: #dcfce7;
-  --success-200: #22c55e;
-  --success-300: #16a34a;
-  --success-400: #166534;
+  --color-success-100: #dcfce7;
+  --color-success-200: #22c55e;
+  --color-success-300: #16a34a;
+  --color-success-400: #166534;
 
-  --danger-100: #fee2e2;
-  --danger-200: #ef4444;
-  --danger-300: #dc2626;
-  --danger-400: #991b1b;
+  --color-danger-100: #fee2e2;
+  --color-danger-200: #ef4444;
+  --color-danger-300: #dc2626;
+  --color-danger-400: #991b1b;
 }
