💄 Design: danger-100 색상 수정 (#49)

--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ body {
   --color-success-600: #16a34a;
   --color-success-800: #166534;
 
-  --color-danger-100: #fee2e2;
+  --color-danger-100: #fca5a5;
   --color-danger-500: #ef4444;
   --color-danger-600: #dc2626;
   --color-danger-800: #991b1b;
