💄 Chore: 텍스트 Secondary 컬러/ 폰트 사이즈 조정 (#44)

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,8 @@ body {
   --text-heading5: 1.125rem;
   --text-heading5--font-weight: 600;
 
-  --text-secondary: #4b5563;
+  --color-secondary: #4b5563;
+  --text-secondary: 1rem;
   --text-secondary--font-weight: 400;
 }
 
