💄 Design: 드롭다운에 사용할 애니메이션 클래스 추가 (#24)

--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,17 @@ body {
   --color-danger-600: #dc2626;
   --color-danger-800: #991b1b;
 }
+
+@theme {
+  --animate-fade-in-translateY: fade-in-translateY 0.3s ease-out;
+
+  @keyframes fade-in-translateY {
+    0% {
+      opacity: 0;
+      transform: translateY(-5%);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+}
