--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,19 @@ body {
     }
   }
 }
+
+@layer utilities {
+  .scrollbar-custom::-webkit-scrollbar {
+    width: 16px;
+  }
+  .scrollbar-custom::-webkit-scrollbar-track {
+    border-radius: 16px;
+  }
+  .scrollbar-custom::-webkit-scrollbar-thumb {
+    border-radius: 16px;
+  }
+  .scrollbar-custom::-webkit-scrollbar-thumb {
+    border: 3px solid #fff;
+    background-color: #f3f4f6;
+  }
+}
