💄 Design: 토스트 메시지용 애니메이션 스타일 추가 (#25)

--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,27 @@ body {
   }
 }
 
+@theme {
+  --animate-fade-in-out-toast: fade-in-out-toast 3s ease-out;
+
+  @keyframes fade-in-out-toast {
+    0% {
+      opacity: 0;
+      transform: translateX(10%);
+    }
+    15% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+    85% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+}
+
 @layer utilities {
   .scrollbar-custom::-webkit-scrollbar {
     width: 16px;
