--- a/src/index.css
+++ b/src/index.css
@@ -124,6 +124,10 @@ body {
   }
 }
 
+@theme {
+  --breakpoint-xs: 390px;
+}
+
 @layer utilities {
   .scrollbar-custom::-webkit-scrollbar {
     width: 16px;
